unpackaged/main/default/objects/nbavs__UserRingTarget__c/nbavs__UserRingTarget__c.object-meta.xml
<CustomObject>
    <label>User Ring Target</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Ring Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>