unpackaged/main/default/objects/nbavs__UserRingTarget__c/fields/nbavs__Active__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Active__c</fullName>
    <formula>IF(nbavs__SourceDevice__c != Null  ,  nbavs__SourceDevice__r.nbavs__Enabled__c , false)</formula>
    <label>Device Enabled</label>
    <type>Checkbox</type>
</CustomField>