unpackaged/main/default/objects/nbavs__UserRingTarget__c/fields/nbavs__AssociatedNumber__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AssociatedNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associated Number</label>
    <type>Checkbox</type>
</CustomField>