unpackaged/main/default/objects/nbavs__UserRingTarget__c/fields/nbavs__Number__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Number__c</fullName>
    <label>Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>