unpackaged/main/default/objects/nbavs__UserRingTarget__c/fields/nbavs__Priority__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Priority__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Priority</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>