unpackaged/main/default/objects/nbavs__UserRingTarget__c/fields/nbavs__RingTime__c.field-meta.xml
<CustomField>
    <fullName>nbavs__RingTime__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Ring Time</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>