unpackaged/main/default/objects/nbavs__UserRingTarget__c/fields/nbavs__ScreenCaller__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ScreenCaller__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Screen Caller</label>
    <type>Checkbox</type>
</CustomField>