unpackaged/main/default/objects/nbavs__UserRingTarget__c/fields/nbavs__SourceDevice__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SourceDevice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Device</label>
    <referenceTo>nbavs__Device__c</referenceTo>
    <relationshipLabel>User Ring Targets</relationshipLabel>
    <relationshipName>User_Ring_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>