unpackaged/main/default/objects/nbavs__UserRingTarget__c/fields/nbavs__Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NUMBER</fullName>
                <default>true</default>
                <label>NUMBER</label>
            </value>
            <value>
                <fullName>USER</fullName>
            </value>
            <value>
                <fullName>GROUP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>