unpackaged/main/default/objects/nbavs__UserRingTarget__c/fields/nbavs__UserPolicy__c.field-meta.xml
<CustomField>
    <fullName>nbavs__UserPolicy__c</fullName>
    <label>User Policy</label>
    <referenceTo>nbavs__UserPolicy__c</referenceTo>
    <relationshipLabel>User Ring Targets</relationshipLabel>
    <relationshipName>UserRingTargets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>